replacing clojure.contrib.zip-filter.xml with clojure.data.zip

--- a/resources/test.properties
+++ b/resources/test.properties
@@ -1,4 +1,5 @@
 ## trueknowledge.api.account.id=
 ## trueknowledge.api.password=
 
-
+trueknowledge.api.account.id=api_jodaro
+trueknowledge.api.password=br0ej5rm1wxr1pxp
